Fixed h1 font size to prevent overlapping

--- a/css/main.css
+++ b/css/main.css
@@ -11,7 +11,7 @@ body {
 
 h1 {
     font-family: 'Libre Franklin', sans-serif;
-    font-size: 2.5em;
+    font-size: 2.0em;
 }
 
 h2 {
