--- a/css/medium.css
+++ b/css/medium.css
@@ -1,3 +1,8 @@
+h1 {
+    font-family: 'Libre Franklin', sans-serif;
+    font-size: 2.5em;
+}
+
 .overlay {
     opacity: 0;
 }
